edit date of award

--- a/index.html
+++ b/index.html
@@ -184,9 +184,6 @@
               </li>
             </ul>
           </section>
-        </article>
-
-        <article class="resume active" data-page="resume">
           <section class="timeline">
             <div class="title-wrapper">
               <div class="icon-box">
@@ -254,7 +251,7 @@
               <li class="timeline-item">
                 <h4 class="h4 timeline-item-title">Dean's List Award</h4>
 
-                <span>2023-05-24</span>
+                <span>2023-04-24</span>
               </li>
             </ol>
           </section>
@@ -270,7 +267,7 @@
                 </div>
 
                 <div class="skill-progress-bg">
-                  <div class="skill-progress-fill" style="width: 50%"></div>
+                  <div class="skill-progress-fill" style="width: 50%;"></div>
                 </div>
               </li>
 
@@ -281,7 +278,7 @@
                 </div>
 
                 <div class="skill-progress-bg">
-                  <div class="skill-progress-fill" style="width: 70%"></div>
+                  <div class="skill-progress-fill" style="width: 70%;"></div>
                 </div>
               </li>
 
@@ -292,7 +289,7 @@
                 </div>
 
                 <div class="skill-progress-bg">
-                  <div class="skill-progress-fill" style="width: 30%"></div>
+                  <div class="skill-progress-fill" style="width: 30%;"></div>
                 </div>
               </li>
 
@@ -303,7 +300,7 @@
                 </div>
 
                 <div class="skill-progress-bg">
-                  <div class="skill-progress-fill" style="width: 60%"></div>
+                  <div class="skill-progress-fill" style="width: 60%;"></div>
                 </div>
               </li>
             </ul>
